Removed Montserrat font and replaced with new fonts

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,6 @@
   --background: #162230;
   --lightGray: #cfcfcf;
   /* Fonts */
-  --Montserrat: 'Montserrat', sans-serif;
   --ArialNarrow: 'ArialNarrow', sans-serif;
   --FrizQuadrata: 'FrizQuadrata', sans-serif;
   --LifeCraft: 'LifeCraft', sans-serif;
@@ -53,7 +52,7 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   overflow-x: hidden;
-  font-family: var(--Montserrat) !important;
+  font-family: var(--FrizQuadrata) !important;
   color: var(--white);
 }
 
@@ -76,6 +75,7 @@ img {
 
 .nav {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 2em;
   margin: 2em;
@@ -327,6 +327,8 @@ img {
 }
 
 table {
+  font-family: monospace;
+  font-size: 1rem;
   border-spacing: 0;
   width: 100%;
   max-width: 600px;
@@ -343,6 +345,10 @@ td {
   padding: 1em;
 }
 
+td:first-of-type {
+  width: 25%;
+}
+
 /* Community styles */
 .community h1 {
   text-align: center;
@@ -354,18 +360,23 @@ form {
   margin: 0 auto;
 }
 
+form h2 {
+  text-align: center;
+}
+
 ::placeholder {
-  font-family: var(--Montserrat);
+  font-family: var(--ArialNarrow);
 }
 
 label {
   display: block;
-  font-size: 1.25em;
+  font-size: 1.25rem;
   margin-top: 1em;
 }
 
 input,
 textarea {
+  font-family: var(--ArialNarrow);
   display: block;
   width: 100%;
   border: none;
@@ -377,7 +388,7 @@ textarea {
 
 button {  
   display: block;
-  font-size: 1em;
+  font-size: 1rem;
   background: linear-gradient(-45deg, #00ceff, #00ff6f);
   background-size: 500%;
   animation: background-color 10s linear infinite;
@@ -385,7 +396,7 @@ button {
   outline: none;
   border-radius: 50px;
   font-weight: 900;
-  font-family: var(--Montserrat);
+  font-family: var(--FrizQuadrata);
   color: var(--black);
   box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
   margin: 2em auto 0 auto;
