--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,10 @@
   background-color: var(--turquoise);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   min-width: 300px;
   min-height: 100vh;
@@ -63,9 +67,10 @@ img {
 }
 
 .container {
-  max-width: 1440px;
+  max-width: 1300px;
+  min-height: 500px;
   margin: 0 auto;
-  padding: 1em;
+  padding: 2em;
 }
 
 .overlay {
@@ -306,6 +311,9 @@ img {
 }
 
 /* Setup styles */
+.setup .container {
+  max-width: 1440px;
+}
 .setup .flex {
   display: flex;
   justify-content: center;
@@ -343,6 +351,7 @@ th {
 td {
   border-bottom: 1px solid var(--lightGray);
   padding: 1em;
+  height: 75px;
 }
 
 td:first-of-type {
@@ -419,24 +428,6 @@ button:active {
   100% { background-position: 0% 50%; }
 }
 
-/* Contact styles */
-.icons {
-  display: flex;
-  justify-content: center;
-  gap: 1em;
-}
-
-.icons img {
-  filter: grayscale(1) brightness(100%);
-  width: 100%;
-  max-width: 64px;
-  transition: filter 0.3s;
-}
-
-.icons img:hover {
-  filter: none;
-}
-
 /* Responsive styles */
 @media screen and (max-width: 768px) {
   .setup img {
@@ -470,4 +461,136 @@ button:active {
   text-shadow: 2px 2px 5px var(--black);
   text-align: center;
   font-family: var(--FrizQuadrata);
+}
+
+/* Test */
+
+.test {
+  background: var(--black);
+}
+
+.hero {
+  background-image: url('images/hero.jpg');
+  background-position: center;
+  background-size: cover;
+  height: min(75vh, 750px);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(to bottom, transparent 0%, var(--black) 100%);
+  z-index: 1;
+}
+
+.hero * {
+  z-index: 2;
+}
+
+#twitch-embed {
+  text-align: center;
+  padding: 1em;
+}
+
+#twitch-embed iframe {
+  width: min(100%, 940px);
+  aspect-ratio: 16 / 9;
+  height: auto;
+}
+
+#about {
+  background-image: url('images/illidan.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: rgba(0,0,0,0.75);
+  background-blend-mode: multiply;
+}
+
+h3 {
+  text-align: center;
+}
+
+#community {
+  background-image: url('images/arthas.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: rgba(0,0,0,0.75);
+  background-blend-mode: multiply;
+}
+
+/* Footer styles */
+
+footer {
+  text-align: center;
+  min-height: auto !important;
+}
+
+footer p {
+  font-family: var(--ArialNarrow);
+}
+
+footer p a {
+  color: var(--white);
+}
+
+.icons {
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+  margin: 2em;
+}
+
+.icons a img {
+  filter: grayscale(1) brightness(100%);
+  width: 100%;
+  max-width: 50px;
+  transition: filter 0.3s;
+}
+
+.icons a img:hover {
+  filter: none;
+}
+
+.icons > img {
+  opacity: 0.5;
+  border-radius: 50%;
+  max-width: 50px;
+  cursor: pointer;
+  transition: opacity 0.3s;
+}
+
+.icons > img:hover {
+  opacity: 1;
+}
+
+/* Custom Scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
