--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ img {
 }
 
 .nav a {
-  font-size: clamp(1rem, 2vw, 1.5rem)
+  font-size: clamp(1rem, 2vw, 1.5rem);
   color: var(--white);
   text-decoration: none;
   text-transform: uppercase;
